	PR middle-end/27478

* trans-decl.c (gfc_get_fake_result_decl): Mark var as
	TREE_ADDRESSABLE.

	* gfortran.dg/entry_8.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117396 138bc75d-0d04-0410-961f-82ee72b054a4